--- a/src/App.css
+++ b/src/App.css
@@ -13,9 +13,15 @@
   text-decoration: none;
   list-style: none;
   gap:20px;
-  padding: 0 20px;
+  padding: 10ps 20px;
 }
-
+.navbar select{
+  background-color: black;
+  color:wheat;
+  padding: 5px;
+  border-radius: 5px;
+  border: 1px solid orange;
+}
 .leaflet-container{
   height: 100%;
   width: 100%;
